@@ -113,9 +113,7 @@ if (isset($requestee) && ! is_null($requestee) && (!isset($error) || is_null($er
   // Send the email
   $email = $user->email();
   $name = $user->prettyName();
-  $headers = "Auto-Submitted: auto-generated\r\n";
-  $headers .= "Precedence: bulk\r\n";
-  $headers .= "Reply-To: $email" . "\r\n" . "From: \"$name (via the GENI Portal)\" <www-data@gpolab.bbn.com>";  
+  $headers = "Reply-To: $email" . "\r\n" . "From: \"$name (via the GENI Portal)\" <www-data@gpolab.bbn.com>";
 
   mail($requestee,
        "Please create me a GENI Project",
